ru locale added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,8 @@
 				<li> <a href="http://www..."> Домой </a></li>
 				<li> <a href="http://www..."> ЧаВо </a></li>		
 				<li> <a href="http://www..."> Новости </a></li>		
-				<li> <a href="http://www..."> Контакты </a></li>	
+				<li> <a href="http://www..."> Контакты </a></li>
+				<li> <%= Time.now %></li>	
 			</ul>
 		</div>
 	</div>
